--- a/.github/workflows/upload-data-cron.yml
+++ b/.github/workflows/upload-data-cron.yml
@@ -1,10 +1,9 @@
 
 name: Upload Data on Cron
 
-# on:
-#  schedule:
-#    - cron:  "0 11 * * *"
-on: workflow_dispatch
+on:
+ schedule:
+   - cron:  "30 12 * * *"
 
 
 jobs:
